--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,20 @@
-<!DOCTYPY html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>My Webpage!</title>
 	</head>
 	<body>
+		An Unordered List:
+		<ul>
+			<li>One Item</li>
+			<li>Another Item</li>
+			<li>Third Item</li>
+		</ul>
+		An Ordered List:
+		<ol>
+			<li>First Item</li>
+			<li>Second Item</li>
+		</ol>
 		hello, world!
 	</body>
 </html>
