--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,7 @@
 			<li>First Item</li>
 			<li>Second Item</li>
 		</ol>
+		<a href="https://allan0xbffff.github.io/lecture/hello.html">Here</a>
 		hello, world!
 	</body>
 </html>
