--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 		<title>My Webpage!</title>
 	</head>
 	<body>
-		Wellcome to my web page!
+		<h1 color="blue">Wellcome to my web page!</h1>
 		An Unordered List:
 		<ul>
 			<li>One Item</li>
@@ -16,7 +16,6 @@
 			<li>First Item</li>
 			<li>Second Item</li>
 		</ol>
-		<a href="https://allan0xbffff.github.io/lecture/hello.html">Here</a>
-		hello, world!
+		
 	</body>
 </html>
