--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 		<title>My Webpage!</title>
 	</head>
 	<body>
-		<h1 color="blue">Wellcome to my web page!</h1>
+		<h1 color=blue>Welcome to my web page!</h1>
 		An Unordered List:
 		<ul>
 			<li>One Item</li>
