--- a/hello.html
+++ b/hello.html
@@ -5,16 +5,17 @@
 	</head>
 	<body>
 		<h1 style="color:blue;text-align:center">Welcome to my web page!</h1>
-		An Unordered List:
+		  COMPUTING SCIENCE:
 		<ul>
-			<li>One Item</li>
-			<li>Another Item</li>
-			<li>Third Item</li>
+			<li>Hardware/Archetecture</li>
+			<li>System/Kernel</li>
+			<li>Software/Application</li>
 		</ul>
-		An Ordered List:
+		   INFORMATION SECURITY:
 		<ol>
-			<li>First Item</li>
-			<li>Second Item</li>
+			<li>Risk Estimate</li>
+			<li>Threat Analysis/li>
+			<li>Machinezm</li>
 		</ol>
 		
 	</body>
